--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "description": "",
   "version": "1.0.0",
   "main": "src/index.js",
+  "type": "module",
   "author": "Rashid <rashidmahar73@gmail.com>",
   "license": "ISC",
   "scripts": {
